Fix Dark Mode

--- a/src/sass/assets/_icons.scss
+++ b/src/sass/assets/_icons.scss
@@ -45,3 +45,9 @@
         stroke: inherit;
     }
 }
+
+.dark-icon {
+    &__path {
+        fill: var(--primary-theme);
+    }
+}
