--- a/src/sass/components/_searchBar.scss
+++ b/src/sass/components/_searchBar.scss
@@ -12,7 +12,8 @@
         width: 100%;
         max-height: 100%;
         padding: 0.5rem 1rem;
-        border-color: var(--primary);
+        border: 1px solid var(--primary-theme);
+        background-color: var(--background);
         color: var(--primary);
         border-radius: 5px;
         outline: none;
