--- a/src/sass/components/_todo.scss
+++ b/src/sass/components/_todo.scss
@@ -1,7 +1,7 @@
 .todo {
     display: flex;
     min-width: 100%;
-    min-height: 23px;
+    height: 25px;
     padding: 0 1rem;
     justify-content: space-between;
     align-items: center;
@@ -21,6 +21,7 @@
         padding-left: 25px;
         margin-right: 15px;
         font-size: 14px;
+        color: var(--text);
 
         &:before {
             content: '';
